--- a/components/genseqProjetos/projetos.html
+++ b/components/genseqProjetos/projetos.html
@@ -22,7 +22,7 @@
 							</tr>
 						</thead>
 						<tbody ng-repeat="registro in vm.lista_projetos">
-							<tr>
+							<tr ng-click="vm.edit_registro($index)">
 								<td>{{registro.nome}}</td>
 								<td>{{registro.descricao}}</td>
 								<td>{{registro.instituicao.nome}}</td>
@@ -88,7 +88,7 @@
 								<label>Membros</label>
 								<ul class="list-unstyled" ng-repeat="registro in vm.membros_projeto">
 									<li>
-										{{registro.nome}}
+										{{registro.usuario.nome}}{{registro.papel.descricao}}
 									</li>
 								</ul>
 							</div>
@@ -100,7 +100,7 @@
 							
 							<div class="btn-toolbar">
 								<button type="reset" class="btn btn-sm btn-danger pull-right" ng-click="vm.limpar_membros()">&nbsp;&nbsp;<i class="fa fa-times"></i> Limpar&nbsp;&nbsp;&nbsp;</button> 
-								<button type="submit" class="btn btn-sm btn-success pull-right" onclick="projeto__form.$valid && $('#AddProjetoModal').modal('hide')"><i class="fa fa-check"></i> Cadastrar</button>
+								<button type="submit" class="btn btn-sm btn-success pull-right" onclick="projeto__form.$valid"><i class="fa fa-check"></i> Cadastrar</button>
 							</div>
 						</form>
 					</div>
@@ -113,7 +113,73 @@
 	<!-- /.modal-dialog -->
 </div>
 <!-- /.modal -->
-
+<!-- /.modal -->
+<div class="modal fade" id="EditProjetoModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+	<div class="modal-dialog modal-lg">
+		<div class="modal-content">
+			<div class="modal-header">
+				<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+				<h4 class="modal-title" id="myModalLabel">Editar Projeto</h4>
+			</div>
+			<div class="modal-body">
+				<div class="panel panel-default">
+					<div class="panel-body">
+						<form role="form" ng-submit="projeto__form.$valid && vm.update()" name="projeto__form" novalidate>
+							<div class="form-group"> 
+                                <label>Nome do Projeto </label>
+								<input type="text" class="form-control" id="projeto__nome" name="projeto__nome" placeholder="Nome " ng-model="vm.nome" required />
+								<small ng-show="projeto__form.projeto__nome.$error.required" class="text-danger">
+									Este campo é obrigatório
+								</small>
+							</div>
+							<div class="form-group">
+								<label>Descrição do Projeto</label>
+								<input type="text" class="form-control" id="projeto__descricao" name="projeto__descricao" placeholder="Descricao " ng-model="vm.descricao" required />
+								<small ng-show="projeto__form.projeto__descricao.$error.required" class="text-danger">
+									Este campo é obrigatório
+								</small>
+							</div>
+							<div class="form-group">
+								<label>Instituição</label>
+								<input type="text" class="form-control" id="projeto__instituicao" name="projeto__instituicao" ng-model="vm.instituicao.nome" disabled required />
+								<small ng-show="projeto__form.projeto__instituicao.$error.required" class="text-danger">
+									Este campo é obrigatório
+								</small>
+							</div>
+							
+							<div class="form-group">
+								<button class="btn btn-success btn-sm" type="button" data-toggle="modal" data-target="#PickInstituicaoModal">
+									<i class="fa fa-plus"></i> Escolher Instituicao
+								</button>
+							</div>
+							<div class="form-group">
+								<label>Membros</label>
+								<ul class="list-unstyled" ng-repeat="registro in vm.membros_projeto">
+									<li>
+										{{registro.usuario.nome}}
+									</li>
+								</ul>
+							</div>
+							<div class="form-group">
+								<button class="btn btn-default btn-sm" type="button" data-toggle="modal" data-target="#EditMembrosModal">
+									<i class="fa fa-pencil "></i> Editar Membros
+								</button>
+							</div>
+							
+							<div class="btn-toolbar">
+								<button type="submit" class="btn btn-sm btn-success pull-right" onclick="projeto__form.$valid && $('#EditProjetoModal').modal('hide')"><i class="fa fa-check"></i> Salvar</button>
+							</div>
+						</form>
+					</div>
+					
+				</div>
+			</div>
+		</div>
+		<!-- /.modal-content -->
+	</div>
+	<!-- /.modal-dialog -->
+</div>
+<!-- /.modal -->	
 <div class="modal fade" id="PickInstituicaoModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
 	<div class="modal-dialog modal-lg">
 		<div class="modal-content">
