--- a/components/genseqUsuarios/editar_cadastro.html
+++ b/components/genseqUsuarios/editar_cadastro.html
@@ -5,7 +5,7 @@
 	<!-- /.col-lg-12 -->
 </div>
 <!-- /.row -->
-<div class="row" ng-controller="UsuarioController as vm">
+<div class="row">
 	<div class="col-lg-12">
 		<div class="panel panel-default">
 
