--- a/components/genseqProjetos/projetos.html
+++ b/components/genseqProjetos/projetos.html
@@ -86,15 +86,15 @@
 							</div>
 							<div class="form-group">
 								<label>Membros</label>
-								<ul class="list-unstyled" ng-repeat="registro in vm.membros_projeto">
+								<ul class="list-unstyled" ng-repeat="registro in vm.membros_projeto_view">
 									<li>
-										{{registro.usuario.nome}}{{registro.papel.descricao}}
+										{{registro.usuario.nome}} - {{registro.papel.descricao}}
 									</li>
 								</ul>
 							</div>
 							<div class="form-group">
-								<button class="btn btn-default btn-sm" type="button" data-toggle="modal" data-target="#EditMembrosModal">
-									<i class="fa fa-pencil "></i> Editar Membros
+								<button class="btn btn-default btn-sm" type="button" data-toggle="modal" data-target="#AddMembrosModal">
+									<i class="fa fa-pencil "></i> Adicionar Membros
 								</button>
 							</div>
 							
@@ -154,9 +154,9 @@
 							</div>
 							<div class="form-group">
 								<label>Membros</label>
-								<ul class="list-unstyled" ng-repeat="registro in vm.membros_projeto">
+								<ul class="list-unstyled" ng-repeat="registro in vm.membros_projeto_view">
 									<li>
-										{{registro.usuario.nome}}
+										{{registro.usuario.nome}} - {{registro.papel.descricao}}
 									</li>
 								</ul>
 							</div>
@@ -218,23 +218,25 @@
 </div>
 <!-- /.modal -->
 
-<div class="modal fade" id="EditMembrosModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+<div class="modal fade" id="AddMembrosModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
 	<div class="modal-dialog modal-lg">
 		<div class="modal-content">
 			<div class="modal-header">
 				<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-				<h4 class="modal-title" id="myModalLabel">Editar Membros</h4>
+				<h4 class="modal-title" id="myModalLabel">Adicionar Membros</h4>
 			</div>
 			<div class="modal-body">
 				<div class="panel panel-default">
 					<div class="panel-heading">
 						<label>Membros atuais</label>
-					<ul class="list-unstyled" ng-repeat="registro in vm.membros_projeto">
+					<ul class="list-unstyled" ng-repeat="registro in vm.membros_projeto_view">
 						<li>
 							<button class="btn btn-danger btn-xs" type="submit" ng-click="vm.remove(registro)">
 								<i class="fa fa-times" ></i>
 							</button>
-							{{registro.nome}}
+						{{registro.usuario.nome}}
+									<select class="selectpicker"  ng-model="registro.papel" ng-options="papel.descricao for papel in vm.lista_papeis">
+								   </select>
 						</li>
 					</ul>
 					</div>
@@ -256,7 +258,58 @@
 						</div>
 						<div class="btn-toolbar">
 							<button type="submit" class="btn btn-sm btn-danger pull-right" ng-click="vm.limpar_membros()">&nbsp;&nbsp;<i class="fa fa-times"></i> Limpar&nbsp;&nbsp;&nbsp;</button> 
-							<button type="submit" class="btn btn-sm btn-success pull-right" onclick="$('#EditMembrosModal').modal('hide')"><i class="fa fa-check"></i> Finalizar Edição</button>
+							<button type="submit" class="btn btn-sm btn-success pull-right" onclick="$('#AddMembrosModal').modal('hide')"><i class="fa fa-check"></i> Finalizar Adição</button>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<!-- /.modal-content -->
+	</div>
+	<!-- /.modal-dialog -->
+</div>
+<!-- /.modal -->
+<div class="modal fade" id="EditMembrosModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+	<div class="modal-dialog modal-lg">
+		<div class="modal-content">
+			<div class="modal-header">
+				<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+				<h4 class="modal-title" id="myModalLabel">Editar Membros</h4>
+			</div>
+			<div class="modal-body">
+				<div class="panel panel-default">
+					<div class="panel-heading">
+						<label>Membros atuais</label>
+					<ul class="list-unstyled" ng-repeat="registro in vm.membros_projeto_view">
+						<li>
+							<button class="btn btn-danger btn-xs" type="submit" ng-click="vm.remove_bd(registro)">
+								<i class="fa fa-times" ></i>
+							</button>
+						{{registro.usuario.nome}}
+						<select class="selectpicker"  ng-model="registro.papel" ng-options="papel.descricao for papel in vm.lista_papeis">
+								   </select>
+						</li>
+					</ul>
+					</div>
+					<div class="panel-body">
+						<form role="form">
+							<label>Buscar <input type="text" ng-model="vm.filtro_membro" /></label> 
+						</form>
+					</div>
+					<div class="panel-body">
+						<div class="form-group">
+							<ul class="list-unstyled" ng-repeat="registro in vm.lista_usuarios | filter:vm.filtro_membro">
+								<li>
+									<button class="btn btn-success btn-xs" type="submit" ng-click="vm.add_membro(registro)">
+										<i class="fa fa-plus" ></i>
+									</button>
+									{{registro.nome}}
+								</li>
+							</ul>
+						</div>
+						<div class="btn-toolbar">
+							<button type="submit" class="btn btn-sm btn-danger pull-right" ng-click="vm.limpar_membros()">&nbsp;&nbsp;<i class="fa fa-times"></i> Limpar&nbsp;&nbsp;&nbsp;</button> 
+							<button type="submit" class="btn btn-sm btn-success pull-right" ng-click="vm.edit_membros()"><i class="fa fa-check"></i> Finalizar Edição</button>
 						</div>
 					</div>
 				</div>
