--- a/components/genseqAmostras/amostras.html
+++ b/components/genseqAmostras/amostras.html
@@ -58,6 +58,7 @@
 					<table class="table table-hover">
 						<thead>
 							<tr>
+								<th>Organismo</th>
 								<th>Observação</th>
 								<th>Serviço</th>
 								<th>Sistema</th>
@@ -66,9 +67,10 @@
 						</thead>
 						<tbody ng-repeat="registro in vm.lista_amostra_projeto">
 							<tr ng-click="vm.edit_registro($index)">
-								<td>{{registro.observacao}}</td>
-								<td>{{registro.servico.nome}}</td>
-								<td>{{registro.sistema.nome}}</td>
+								<td>{{registro.amostra.organismo}}</td>
+								<td>{{registro.amostra.observacao}}</td>
+								<td>{{registro.amostra.servico.descricao}}</td>
+								<td>{{registro.amostra.sistema.descricao}}</td>
 								<td ng-if="registro.autorizado_em != null">Aprovado</td>
 								<td ng-if="registro.autorizado_em == null">Em aprovação</td>
 							</tr>
@@ -101,47 +103,34 @@
 					<div class="panel-body">
 						<form role="form" ng-submit="projeto__form.$valid && vm.submit()" name="projeto__form" novalidate>
 							<div class="form-group"> 
-                                <label>Nome do Projeto</label>
-								<input type="text" class="form-control" id="projeto__nome" name="projeto__nome" placeholder="Nome " ng-model="vm.nome" required />
-								<small ng-show="projeto__form.projeto__nome.$error.required" class="text-danger">
+                                <label>Organismo</label>
+								<input type="text" class="form-control" id="projeto__organismo" name="projeto__organismo" placeholder="Organismo " ng-model="vm.organismo" required />
+								<small ng-show="projeto__form.projeto__organismo.$error.required" class="text-danger">
 									Este campo é obrigatório
 								</small>
 							</div>
-							<div class="form-group">
-								<label>Descrição do Projeto</label>
-								<input type="text" class="form-control" id="projeto__descricao" name="projeto__descricao" placeholder="Descricao " ng-model="vm.descricao" required />
-								<small ng-show="projeto__form.projeto__descricao.$error.required" class="text-danger">
-									Este campo é obrigatório
-								</small>
+							<div class="form-group"> 
+                                <label>Escolha o tipo de organismo</label>
+										  <select class="selectpicker"  ng-model="vm.tipo_organismo" required>
+										  <option value="O">Organismo</option>
+										  <option value="G">Gel</option>
+								   </select>
+									{{vm.tipo_organismo}}
 							</div>
 							<div class="form-group">
-								<label>Instituição</label>
-								<input type="text" class="form-control" id="projeto__instituicao" name="projeto__instituicao" ng-model="vm.instituicao.nome" disabled required />
-								<small ng-show="projeto__form.projeto__instituicao.$error.required" class="text-danger">
-									Este campo é obrigatório
-								</small>
+								<label>Sistema</label>
+								<select class="selectpicker"  ng-model="vm.sistema" ng-options="sistema.descricao for sistema in vm.lista_sistemas" required>
+								   </select>
+									{{vm.sistema}}
 							</div>
 							<div class="form-group">
-								<button class="btn btn-success btn-sm" type="button" data-toggle="modal" data-target="#PickInstituicaoModal">
-									<i class="fa fa-plus"></i> Escolher Instituicao
-								</button>
+								<label>Servico</label>
+								<select class="selectpicker"  ng-model="vm.servico" ng-options="servico.descricao for servico in vm.lista_servicos" required>
+								   </select>
+									{{vm.servico}}
 							</div>
-							<div class="form-group">
-								<label>Membros</label>
-								<ul class="list-unstyled" ng-repeat="registro in vm.membros_projeto_view">
-									<li>
-										{{registro.usuario.nome}}{{registro.papel.descricao}}
-									</li>
-								</ul>
-							</div>
-							<div class="form-group">
-								<button class="btn btn-default btn-sm" type="button" data-toggle="modal" data-target="#AddMembrosModal">
-									<i class="fa fa-pencil "></i> Adicionar Membros
-								</button>
-							</div>
-							
 							<div class="btn-toolbar">
-								<button type="reset" class="btn btn-sm btn-danger pull-right" ng-click="vm.limpar_membros()">&nbsp;&nbsp;<i class="fa fa-times"></i> Limpar&nbsp;&nbsp;&nbsp;</button> 
+								<button type="reset" class="btn btn-sm btn-danger pull-right" ng-click="vm.limpar_amostra()">&nbsp;&nbsp;<i class="fa fa-times"></i> Limpar&nbsp;&nbsp;&nbsp;</button> 
 								<button type="submit" class="btn btn-sm btn-success pull-right" onclick="projeto__form.$valid"><i class="fa fa-check"></i> Cadastrar</button>
 							</div>
 						</form>
