--- a/components/genseqAmostras/amostras.html
+++ b/components/genseqAmostras/amostras.html
@@ -7,7 +7,42 @@
 <!-- /.row -->
 <div class="row">
 	<div class="col-lg-12">
-		<div class="panel panel-default">
+		<div restrict access="1" class="panel panel-default">
+		<!-- view admin -->
+			<div class="panel-heading">Selecione um Projeto</div>
+			<!-- /.panel-heading -->
+			<div class="panel-body">
+				<div class="table-responsive">
+					<table class="table table-hover">
+						<thead>
+							<tr>
+								<th>Nome</th>
+								<th>Descrição</th>
+								<th>Instituição</th>
+								<th>Status</th>
+							</tr>
+						</thead>
+						<tbody ng-repeat="registro in vm.lista_projetos">
+							<tr ng-click="vm.edit_registro_adm($index)">
+								<td>{{registro.nome}}</td>
+								<td>{{registro.descricao}}</td>
+								<td>{{registro.instituicao.nome}}</td>
+								<td ng-if="registro.autorizado_em != null">Aprovado</td>
+								<td ng-if="registro.autorizado_em == null">Em aprovação</td>
+							</tr>
+						</tbody>
+					</table>
+				</div>
+				
+				<!-- /.table-responsive -->
+			</div>
+			<!-- /.panel-body -->
+		</div>
+		<!-- /.panel-body -->
+	</div>
+	<!-- /.panel -->
+	<div restrict access="2" class="panel panel-default">
+		<!-- view user -->
 			<div class="panel-heading">Selecione um Projeto</div>
 			<!-- /.panel-heading -->
 			<div class="panel-body">
@@ -58,7 +93,6 @@
 					<table class="table table-hover">
 						<thead>
 							<tr>
-								<th></th>
 								<th>Organismo</th>
 								<th>Observação</th>
 								<th>Serviço</th>
@@ -67,18 +101,71 @@
 							</tr>
 						</thead>
 						<tbody ng-repeat="registro in vm.lista_amostra_projeto">
-							<tr ng-click="vm.edit_registro($index)">
-								<td ng-if="registro.autorizado_em == null">
-									<button class="btn btn-danger btn-xs" type="submit" ng-click="vm.remove(registro)">
-										<i class="fa fa-times" ></i>
-									</button>
-								</td>
+							<tr>
 								<td>{{registro.amostra.organismo}}</td>
 								<td>{{registro.amostra.observacao}}</td>
 								<td>{{registro.amostra.servico.descricao}}</td>
 								<td>{{registro.amostra.sistema.descricao}}</td>
-								<td ng-if="registro.autorizado_em != null">Aprovado</td>
-								<td ng-if="registro.autorizado_em == null">Em aprovação</td>
+								<td>{{registro.amostra.status.descricao}}
+									<button ng-if="registro.amostra.status.id == 1" class="btn btn-danger btn-xs pull-right" type="submit" ng-click="vm.remove(registro)">
+										<i class="fa fa-times" ></i>
+									</button>
+								</td>
+							</tr>
+						</tbody>
+					</table>
+				</div>
+
+				<button class="btn btn-success btn-lg pull-right btn-sm" type="button" data-toggle="modal" data-target="#AddAmostraModal">
+					<i class="fa fa-plus"></i> Adicionar Amostra
+				</button>
+					</div>
+					
+				</div>
+			</div>
+		</div>
+		<!-- /.modal-content -->
+	</div>
+	<!-- /.modal-dialog -->
+</div>
+<!-- /.modal -->
+<div class="modal fade" id="EditProjetoAdmModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+	<div class="modal-dialog modal-lg">
+		<div class="modal-content">
+			<div class="modal-header">
+				<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+				<h4 class="modal-title" id="myModalLabel">Editar Amostras</h4>
+			</div>
+			<div class="modal-body">
+				<div class="panel panel-default">
+					<div class="panel-body">
+						<div class="table-responsive">
+					<table class="table table-hover">
+						<thead>
+							<tr>
+								<th>Organismo</th>
+								<th>Observação</th>
+								<th>Serviço</th>
+								<th>Sistema</th>
+								<th>Status</th>
+							</tr>
+						</thead>
+						<tbody ng-repeat="registro in vm.lista_amostra_projeto">
+							<tr>
+
+								<td><button  class="btn btn-danger btn-xs" type="submit" ng-click="vm.remove(registro)">
+										<i class="fa fa-times" ></i>
+									</button>
+									{{registro.amostra.organismo}}
+								</td>
+								<td>{{registro.amostra.observacao}}</td>
+								<td>{{registro.amostra.servico.descricao}}</td>
+								<td>{{registro.amostra.sistema.descricao}}</td>
+								<td>{{registro.amostra.status.descricao}}
+									<button type="button" class="btn btn-sm btn-success pull-right" ng-click="vm.receber_amostra(registro)"><i class="fa fa-check"></i> Recebida</button>
+									<button type="button" class="btn btn-sm btn-danger pull-right" ng-click="vm.rejeitar_amostra(registro)"><i class="fa fa-times"></i> Rejeitada</button>
+									
+								</td>
 							</tr>
 						</tbody>
 					</table>
@@ -117,7 +204,7 @@
 							</div>
 							<div class="form-group"> 
                                 <label>Escolha o tipo de organismo</label>
-										  <select class="selectpicker"  ng-model="vm.tipo_organismo" required>
+										  <select class="selectpicker"  ng-model="vm.tipo" required>
 										  <option value="O">Organismo</option>
 										  <option value="G">Gel</option>
 								   </select>
