--- a/components/genseqCorridas/corridas.html
+++ b/components/genseqCorridas/corridas.html
@@ -7,7 +7,7 @@
 <!-- /.row -->
 <div class="row">
 	<div class="col-lg-12">
-		<div class="panel panel-default">
+		<div restrict access="1" class="panel panel-default">
 			<div class="panel-heading">				
 				<button class="btn btn-success btn-sm" type="button" data-toggle="modal" data-target="#AddCorridaModal">
 					<i class="fa fa-plus"></i> Adicionar Corrida
@@ -27,6 +27,34 @@
 						</thead>
 						<tbody ng-repeat="registro in vm.lista_corridas">
 							<tr ng-click="vm.edit_registro($index)">
+								<td>{{registro.id}}</td>
+								<td>{{registro.sistema.descricao}}</td>
+								<td>{{registro.servico.descricao}}</td>
+								<td>{{registro.detalhes}}</td>
+							</tr>
+						</tbody>
+					</table>
+				</div>
+			</div>
+			<!-- /.panel-body -->
+		</div>
+		<!-- /.panel-body -->
+		<div restrict access="2" class="panel panel-default">
+
+			<!-- /.panel-heading -->
+			<div class="panel-body">
+				<div class="table-responsive">
+					<table class="table table-hover">
+						<thead>
+							<tr>
+								<th>ID</th>
+								<th>Sistema</th>
+								<th>Servico</th>
+								<th>Detalhes</th>
+							</tr>
+						</thead>
+						<tbody ng-repeat="registro in vm.lista_corridas">
+							<tr ng-click="vm.view_registro($index)">
 								<td>{{registro.id}}</td>
 								<td>{{registro.sistema.descricao}}</td>
 								<td>{{registro.servico.descricao}}</td>
@@ -117,10 +145,6 @@
 	<!-- /.modal-dialog -->
 </div>
 
-
-
-
-
 <div class="modal fade" id="EditCorridaModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
 	<div class="modal-dialog modal-lg">
 		<div class="modal-content">
@@ -132,65 +156,125 @@
 				<div class="panel panel-default">
 					<div class="panel-body">
 					<form role="form" ng-submit="projeto__form.$valid && vm.submit_edit()" name="projeto__form" novalidate>
-					
-					<div class="form-group">
-						<label>Sistema</label>
-						<select class="selectpicker"  ng-model="vm.sistema" ng-options="sistema.descricao for sistema in vm.lista_sistemas" required>
+						<div class="form-group">
+							<label>Sistema</label>
+							<select class="selectpicker"  ng-model="vm.sistema" ng-options="sistema.descricao for sistema in vm.lista_sistemas" required>
 							</select>
-					</div>
-					<div class="form-group">
-						<label>Servico</label>
-						<select class="selectpicker"  ng-model="vm.servico" ng-options="servico.descricao for servico in vm.lista_servicos" required>
+						</div>
+						<div class="form-group">
+							<label>Servico</label>
+							<select class="selectpicker"  ng-model="vm.servico" ng-options="servico.descricao for servico in vm.lista_servicos" required>
 							</select>
-					</div>
-					<div class="form-group"> 
-						<label>Detalhes</label>
-						<input type="text" class="form-control" id="projeto__detalhes" name="projeto__detalhes" placeholder="Detalhes " ng-model="vm.detalhes" />
-					</div>
-					<div class="table-responsive">
-						<table class="table table-hover">
-							<thead>
-								<tr>
-									<th></th>
-									<th>Amostra</th>
-									<th>Kit Deplecao</th>
-									<th>Resultado</th>
-									<th>Barcode</th>
-									<th>Ciclos PCR</th>
-								</tr>
-							</thead>
-							<tbody ng-repeat="registro in vm.lista_amostracorrida_view">
-								<tr ng-click="vm.edit_amostras($index)">
-									<td ng-if="registro.autorizado_em == null">
-										<button class="btn btn-danger btn-xs" type="button" ng-click="vm.edit_remove($index)">
-											<i class="fa fa-times" ></i>
-										</button>
-									</td>
-									<td>{{registro.amostra.organismo}}</td>
-									<td>{{registro.kit_deplecao.descricao}}</td>
-									<td>{{registro.resultado}}</td>
-									<td>{{registro.barcode}}</td>
-									<td>{{registro.ciclos_pcr}}</td>
-								</tr>
-							</tbody>
-							<button class="btn btn-success btn-lg pull-left btn-sm" type="button" data-toggle="modal" data-target="#EditAddAmostraModal">
-								<i class="fa fa-plus"></i> Adicionar Amostra
-							</button>
-						</table>
+						</div>
+						<div class="form-group"> 
+							<label>Detalhes</label>
+							<input type="text" class="form-control" id="projeto__detalhes" name="projeto__detalhes" placeholder="Detalhes " ng-model="vm.detalhes" />
+						</div>
+						<div class="table-responsive">
+							<table class="table table-hover">
+								<thead>
+									<tr>
+										<th></th>
+										<th>Amostra</th>
+										<th>Kit Deplecao</th>
+										<th>Resultado</th>
+										<th>Barcode</th>
+										<th>Ciclos PCR</th>
+									</tr>
+								</thead>
+								<tbody ng-repeat="registro in vm.lista_amostracorrida_view">
+									<tr ng-click="vm.edit_amostras($index)">
+										<td ng-if="registro.autorizado_em == null">
+											<button class="btn btn-danger btn-xs" type="button" ng-click="vm.edit_remove($index)">
+												<i class="fa fa-times" ></i>
+											</button>
+										</td>
+										<td>{{registro.amostra.organismo}}</td>
+										<td>{{registro.kit_deplecao.descricao}}</td>
+										<td>{{registro.resultado}}</td>
+										<td>{{registro.barcode}}</td>
+										<td>{{registro.ciclos_pcr}}</td>
+									</tr>
+								</tbody>
+								<button class="btn btn-success btn-lg pull-left btn-sm" type="button" data-toggle="modal" data-target="#EditAddAmostraModal">
+									<i class="fa fa-plus"></i> Adicionar Amostra
+								</button>
+							</table>
 					
-					</div>		
+						</div>		
 					
-					<div class="btn-toolbar">
-						<button type="submit" class="btn btn-sm btn-success pull-right" onclick="projeto__form.$valid"><i class="fa fa-check"></i> Salvar</button>
+						<div class="btn-toolbar">
+							<button type="submit" class="btn btn-sm btn-success pull-right" onclick="projeto__form.$valid"><i class="fa fa-check"></i> Salvar</button>
+						</div>
+					</form>
 					</div>
-				</form>
+					
 				</div>
-					
 			</div>
 		</div>
+		<!-- /.modal-content -->
 	</div>
-	<!-- /.modal-content -->
+	<!-- /.modal-dialog -->
 </div>
+
+<div class="modal fade" id="ViewCorridaModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+	<div class="modal-dialog modal-lg">
+		<div class="modal-content">
+			<div class="modal-header">
+				<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+				<h4 class="modal-title" id="myModalLabel">Visualizar Corrida</h4>
+			</div>
+			<div class="modal-body">
+				<div class="panel panel-default">
+					<div class="panel-body">
+					<form role="form" name="projeto__form" novalidate>
+						<div class="form-group">
+							<label>Sistema</label>
+							<input type="text" class="form-control" id="projeto__detalhes" name="projeto__detalhes" placeholder="Sistema " ng-model="vm.sistema" disabled />
+						</div>
+						<div class="form-group">
+							<label>Servico</label>
+							<input type="text" class="form-control" id="projeto__detalhes" name="projeto__detalhes" placeholder="Sistema " ng-model="vm.servico" disabled />
+						</div>
+						<div class="form-group"> 
+							<label>Detalhes</label>
+							<input type="text" class="form-control" id="projeto__detalhes" name="projeto__detalhes" placeholder="Detalhes " ng-model="vm.detalhes" disabled />
+						</div>
+						<div class="table-responsive">
+							<table class="table table-hover">
+								<thead>
+									<tr>
+										<th></th>
+										<th>Amostra</th>
+										<th>Kit Deplecao</th>
+										<th>Resultado</th>
+										<th>Barcode</th>
+										<th>Ciclos PCR</th>
+									</tr>
+								</thead>
+								<tbody ng-repeat="registro in vm.lista_amostracorrida_view">
+									<tr ng-click="vm.view_amostras($index)">
+										<td>{{registro.amostra.organismo}}</td>
+										<td>{{registro.kit_deplecao.descricao}}</td>
+										<td>{{registro.resultado}}</td>
+										<td>{{registro.barcode}}</td>
+										<td>{{registro.ciclos_pcr}}</td>
+									</tr>
+								</tbody>
+							</table>
+					
+						</div>		
+					
+						<div class="btn-toolbar">
+						</div>
+					</form>
+					</div>
+					
+				</div>
+			</div>
+		</div>
+		<!-- /.modal-content -->
+	</div>
 	<!-- /.modal-dialog -->
 </div>
 
