--- a/components/genseqProjetos/projetos.html
+++ b/components/genseqProjetos/projetos.html
@@ -7,7 +7,45 @@
 <!-- /.row -->
 <div class="row">
 	<div class="col-lg-12">
-		<div class="panel panel-default">
+		<div restrict access="1" class="panel panel-default">
+			<div class="panel-heading">
+				<label>Nome <input type="text" ng-model="vm.filtro_projeto" /></label> 
+			</div>
+			<!-- /.panel-heading -->
+			<div class="panel-body">
+				<div class="table-responsive">
+					<table class="table table-hover">
+						<thead>
+							<tr>
+								<th restrict access="ull" >Nome</th>
+								<th>Descrição</th>
+								<th>Instituição</th>
+								<th>Status</th>
+							</tr>
+						</thead>
+						<tbody ng-repeat="registro in vm.lista_projetos | filter:vm.filtro_projeto | orderBy : 'autorizado_em'">
+							<tr ng-click="vm.edit_registro_adm($index)">
+								<td>{{registro.nome}}</td>
+								<td>{{registro.descricao}}</td>
+								<td>{{registro.instituicao.nome}}</td>
+								<td ng-if="registro.autorizado_em != null">Aprovado</td>
+								<td ng-if="registro.autorizado_em == null">Em aprovação</td>
+							</tr>
+						</tbody>
+					</table>
+				</div>
+
+				<button class="btn btn-success btn-lg pull-right btn-sm" type="button" data-toggle="modal" data-target="#AddProjetoModal">
+					<i class="fa fa-plus"></i> Adicionar Projeto
+				</button>
+
+				
+				<!-- /.table-responsive -->
+			</div>
+			<!-- /.panel-body -->
+		</div>
+		<!-- /.panel-body -->
+		<div restrict access="2" class="panel panel-default">
 			<div class="panel-heading">Meus Projetos</div>
 			<!-- /.panel-heading -->
 			<div class="panel-body">
@@ -42,7 +80,6 @@
 			</div>
 			<!-- /.panel-body -->
 		</div>
-		<!-- /.panel-body -->
 	</div>
 	<!-- /.panel -->
 </div>
@@ -127,6 +164,80 @@
 						<form role="form" ng-submit="projeto__form.$valid && vm.update()" name="projeto__form" novalidate>
 							<div class="form-group"> 
                                 <label>Nome do Projeto </label>
+								<input ng-if="vm.dt_autorizacao != null" type="text" class="form-control" id="projeto__nome" name="projeto__nome" placeholder="Nome " ng-model="vm.nome" disabled />
+								<input ng-if="vm.dt_autorizacao == null" type="text" class="form-control" id="projeto__nome" name="projeto__nome" placeholder="Nome " ng-model="vm.nome" required />
+								<small ng-show="projeto__form.projeto__nome.$error.required" class="text-danger">
+									Este campo é obrigatório
+								</small>
+							</div>
+							<div class="form-group">
+								<label>Descrição do Projeto</label>
+								<input ng-if="vm.dt_autorizacao != null" type="text" class="form-control" id="projeto__descricao" name="projeto__descricao" placeholder="Descricao " ng-model="vm.descricao" disabled />
+								<input ng-if="vm.dt_autorizacao == null" type="text" class="form-control" id="projeto__descricao" name="projeto__descricao" placeholder="Descricao " ng-model="vm.descricao" required />
+								<small ng-show="projeto__form.projeto__descricao.$error.required" class="text-danger">
+									Este campo é obrigatório
+								</small>
+							</div>
+							<div class="form-group">
+								<label>Instituição</label>
+								<input type="text" class="form-control" id="projeto__instituicao" name="projeto__instituicao" ng-model="vm.instituicao.nome" disabled required />
+								<small ng-show="projeto__form.projeto__instituicao.$error.required" class="text-danger">
+									Este campo é obrigatório
+								</small>
+							</div>
+							
+							<div class="form-group">
+								<button ng-if="vm.dt_autorizacao == null" class="btn btn-success btn-sm" type="button" data-toggle="modal" data-target="#PickInstituicaoModal">
+									<i class="fa fa-plus"></i> Escolher Instituicao
+								</button>
+							</div>
+							<div class="form-group">
+								<label>Membros</label>
+								<ul class="list-unstyled" ng-repeat="registro in vm.membros_projeto_view">
+									<li>
+										{{registro.usuario.nome}} - {{registro.papel.descricao}}
+									</li>
+								</ul>
+							</div>
+							<div class="form-group">
+								<button class="btn btn-default btn-sm" type="button" data-toggle="modal" data-target="#EditMembrosModal">
+									<i class="fa fa-pencil "></i> Editar Membros
+								</button>
+							</div>
+							
+							<div class="btn-toolbar">
+								<button type="submit" class="btn btn-sm btn-success pull-right" onclick="projeto__form.$valid && $('#EditProjetoModal').modal('hide')"><i class="fa fa-check"></i> Salvar</button>
+							</div>
+						</form>
+					</div>
+					
+				</div>
+			</div>
+		</div>
+		<!-- /.modal-content -->
+	</div>
+	<!-- /.modal-dialog -->
+</div>
+<!-- /.modal -->	
+<div class="modal fade" id="EditProjetoAdmModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+	<div class="modal-dialog modal-lg">
+		<div class="modal-content">
+			<div class="modal-header">
+				<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+				<h4 class="modal-title" id="myModalLabel">Editar Projeto</h4>
+			</div>
+			<div class="modal-body">
+				<div class="panel panel-default">
+					<div class="panel-body">
+						<div class="form-group">
+							<button type="button" class="btn btn-sm btn-success" ng-click="vm.aprovar_projeto()"><i class="fa fa-check"></i> Aprovar</button>
+							<button type="button" class="btn btn-sm btn-danger" ng-click="vm.desaprovar_projeto()"><i class="fa fa-times"></i> Desaprovar</button>
+							<label ng-if="vm.dt_autorizacao != null">Aprovado</label>
+							<label ng-if="vm.dt_autorizacao == null">Em aprovação</label>
+						</div>
+						<form role="form" ng-submit="projeto__form.$valid && vm.update()" name="projeto__form" novalidate>
+							<div class="form-group"> 
+                                <label>Nome do Projeto </label>
 								<input type="text" class="form-control" id="projeto__nome" name="projeto__nome" placeholder="Nome " ng-model="vm.nome" required />
 								<small ng-show="projeto__form.projeto__nome.$error.required" class="text-danger">
 									Este campo é obrigatório
@@ -167,7 +278,7 @@
 							</div>
 							
 							<div class="btn-toolbar">
-								<button type="submit" class="btn btn-sm btn-success pull-right" onclick="projeto__form.$valid && $('#EditProjetoModal').modal('hide')"><i class="fa fa-check"></i> Salvar</button>
+								<button type="submit" class="btn btn-sm btn-success pull-right" onclick="projeto__form.$valid && $('#EditProjetoAdmModal').modal('hide')"><i class="fa fa-check"></i> Salvar</button>
 							</div>
 						</form>
 					</div>
@@ -180,6 +291,7 @@
 	<!-- /.modal-dialog -->
 </div>
 <!-- /.modal -->	
+
 <div class="modal fade" id="PickInstituicaoModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
 	<div class="modal-dialog modal-lg">
 		<div class="modal-content">
