arrumando membros_projeto

--- a/components/genseqProjetos/projetos.html
+++ b/components/genseqProjetos/projetos.html
@@ -44,6 +44,7 @@
 			</div>
 			<!-- /.panel-body -->
 		</div>
+		
 		<!-- /.panel-body -->
 		<div restrict access="2" class="panel panel-default">
 			<div class="panel-heading">Meus Projetos</div>
@@ -278,7 +279,7 @@
 							</div>
 							
 							<div class="btn-toolbar">
-								<button type="submit" class="btn btn-sm btn-success pull-right" onclick="projeto__form.$valid && $('#EditProjetoAdmModal').modal('hide')"><i class="fa fa-check"></i> Salvar</button>
+								<button type="submit" class="btn btn-sm btn-success pull-right" onclick="$('#EditProjetoAdmModal').modal('hide')"><i class="fa fa-check"></i> Salvar</button>
 							</div>
 						</form>
 					</div>
