--- a/components/genseqInstituicao/instituicao.html
+++ b/components/genseqInstituicao/instituicao.html
@@ -5,7 +5,7 @@
     <!-- /.col-lg-12 -->
 </div>
 <!-- /.row -->
-<div class="row" restrict access="1">
+<div restrict access="1" class="row" >
     <div class="col-lg-12">
         <div class="panel panel-default">
             <div class="panel-body">
