--- a/components/genseqUsuarios/editar_cadastro.html
+++ b/components/genseqUsuarios/editar_cadastro.html
@@ -1,6 +1,6 @@
 <div class="row">
 	<div class="col-lg-12">
-		<h1 class="page-header">Editar Cadastro</h1>
+		<h1 class="page-header">Meu Perfil</h1>
 	</div>
 	<!-- /.col-lg-12 -->
 </div>
@@ -16,35 +16,35 @@
 
 							<div class="form-group">
 								<label for="cadastro__nome">Nome Completo</label>
-								<input type="text" class="form-control" id="cadastro__nome" placeholder="Charles Darwin" ng-model="vm.usuario.nome" pattern="[a-zA-Z]+" title="Nome do usuário deve conter apenas letras">
+								<input type="text" class="form-control" id="cadastro__nome" placeholder="Seu nome completo" ng-model="vm.usuario.nome" pattern="[a-zA-Z]+" title="Nome do usuário deve conter apenas letras">
 							</div>
 
 							<fieldset disabled>
 								<div class="form-group">
 									<label for="cadastro__email">Email</label>
-									<input type="email" class="form-control" id="cadastro__email" placeholder="meuemail@dominio.com.br" ng-model="vm.usuario.email">
+									<input type="email" class="form-control" id="cadastro__email" placeholder="Endereço de email válido" ng-model="vm.usuario.email">
 								</div>
 							</fieldset>
 
 
 							<div class="form-group">
-								<label for="cadastro__telefone">Telefone</label>
-								<input type="text" class="form-control" id="cadastro__nome" placeholder="(41)0000-0000" ng-model="vm.usuario.telefone">
+								<label for="cadastro-telefone">Telefone</label>
+								<input type="text" class="form-control phone-mask" data-mask="(00)0000-00000" id="cadastro-telefone" placeholder="Seu telefone com DDD" ng-model="vm.usuario.telefone">
 							</div>
 
 							<div class="form-group">
 								<label for="cadastro__password">Senha</label>
-								<input type="password" class="form-control" id="cadastro__password" placeholder="minhasenha" ng-model="vm.usuario.password">
+								<input type="password" class="form-control" id="cadastro__password" placeholder="" ng-model="vm.usuario.password">
 							</div>
 
 							<div class="form-group">
 								<label for="cadastro__confirm_password">Confirmar Senha</label>
-								<input type="password" class="form-control" id="cadastro__confirm_password" placeholder="minhasenha" ng-model="vm.usuario.confirm_password">
+								<input type="password" class="form-control" id="cadastro__confirm_password" placeholder="" ng-model="vm.usuario.confirm_password">
 							</div>
 
-							<div class="form-group">
+							<div class="form-group pull-right">
 								<button type="submit" class="btn btn-default">Salvar</button>
-								<button type="button" class="btn btn-danger" ng-click="vm.activate()">Update </button>
+								<!-- <button type="button" class="btn btn-danger" ng-click="vm.activate()">Update </button> -->
 							</div>
 
 						</form>
