--- a/views/dashboard/home.html
+++ b/views/dashboard/home.html
@@ -5,16 +5,24 @@
         </div>
         <!-- /.col-lg-12 -->
     </div>
+    <div restrict access="0" class="row">
+        <div class="col-lg-12 text-center">
+            <div class="well well-sm">
+                <span> Primeiro acesso?  <a ui-sref="dashboard.novo_cadastro"> Clique aqui para efetuar seu cadastro.</a></span>
+            </div>
+        </div>
+        <!-- /.col-lg-12 -->
+    </div>
     <!-- /.row -->
     <div class="row">
-        
+
         <stats number="6" comments="New comments!" colour="primary" type="comments"></stats>
         <stats number="12" comments="New tasks!" colour="primary" type="user"></stats>
         <stats number="18" comments="New orders!" colour="yellow" type="shopping-cart"></stats>
         <stats number="24" comments="Support tickets!" colour="red" type="support"></stats>
 
     </div>
-    
+
     <!-- /.panel -->
     <div class="row">
         <div class="col-lg-8">
@@ -35,7 +43,7 @@
                     <i class="fa fa-bell fa-fw"></i> Notifications Panel
                 </div>
                 <!-- /.panel-heading -->
-                <notifications></notifications> 
+                <notifications></notifications>
                 <!-- /.panel-body -->
             </div>
             <!-- /.panel -->
