--- a/styles/genseq.css
+++ b/styles/genseq.css
@@ -51,3 +51,6 @@ nav.navbar.navbar-default.navbar-static-top {
   background-color: #5774a6;
   border-color:#5774a6;
 }
+.btn-escolher-genseq{
+	margin-top:-5px;
+}
