--- a/components/genseqAmostras/amostras.html
+++ b/components/genseqAmostras/amostras.html
@@ -119,7 +119,7 @@
 					</table>
 				</div>
 
-				<button class="btn btn-success btn-lg pull-right btn-sm" type="button" data-toggle="modal" data-target="#AddAmostraModal">
+				<button class="btn btn-success btn-lg pull-right btn-sm" type="button" ng-click="vm.add_amostra()">
 					<i class="fa fa-plus"></i> Adicionar Amostra
 				</button>
 					</div>
@@ -174,7 +174,7 @@
 					</table>
 				</div>
 
-				<button class="btn btn-success btn-lg pull-right btn-sm" type="button" data-toggle="modal" data-target="#AddAmostraModal">
+				<button class="btn btn-success btn-lg pull-right btn-sm" type="button" ng-click="vm.add_amostra()">
 					<i class="fa fa-plus"></i> Adicionar Amostra
 				</button>
 					</div>
@@ -206,21 +206,22 @@
 								</small>
 							</div>
 							<div class="form-group"> 
-                                <label>Escolha o tipo de organismo</label>
-										  <select class="selectpicker"  ng-model="vm.tipo" required>
-										  <option value="O">Organismo</option>
-										  <option value="G">Gel</option>
-								   </select>
+                        <label>Escolha o tipo de organismo</label>
+								<select class="selectpicker"  ng-model="vm.tipo" ng-options="tipo.descricao for tipo in vm.lista_tipos" required>
+								  <option value="">Selecione uma opção</option> <!-- not selected / blank option -->
+								</select>
 							</div>
 							<div class="form-group">
 								<label>Sistema</label>
 								<select class="selectpicker"  ng-model="vm.sistema" ng-options="sistema.descricao for sistema in vm.lista_sistemas" required>
-								   </select>
+									<option value="">Selecione uma opção</option> <!-- not selected / blank option -->
+							   </select>
 							</div>
 							<div class="form-group">
 								<label>Servico</label>
 								<select class="selectpicker"  ng-model="vm.servico" ng-options="servico.descricao for servico in vm.lista_servicos" required>
-								   </select>
+									<option value="">Selecione uma opção</option> <!-- not selected / blank option -->
+								</select>
 							</div>
 							<div class="form-group"> 
                                 <label>Observacao</label>
