adicionando divs com restrict acess=0
com a mensagem "É necessário estar logado para visualizar essa página."

--- a/components/genseqAmostras/amostras.html
+++ b/components/genseqAmostras/amostras.html
@@ -42,10 +42,9 @@
 			<!-- /.panel-body -->
 		</div>
 		<!-- /.panel-body -->
-	</div>
-	<!-- /.panel -->
-	<div restrict access="2" class="panel panel-default">
-		<!-- view user -->
+
+		<div restrict access="2" class="panel panel-default">
+			<!-- view user -->
 			<div class="panel-heading">Selecione um Projeto</div>
 			<!-- /.panel-heading -->
 			<div class="panel-body">
@@ -69,11 +68,23 @@
 							</tr>
 						</tbody>
 					</table>
+				</div>					
+				<!-- /.table-responsive -->
+			</div>
+			<!-- /.panel-body -->
+			
+		</div>
+		<!-- /.panel-body -->
+		<div restrict access="0" class="panel panel-default">
+		<!-- view not logged -->
+			<div class="panel-body">
+				<div class="table-responsive">
+					É necessário estar logado para visualizar essa página.
 				</div>
 				
 				<!-- /.table-responsive -->
 			</div>
-			<!-- /.panel-body -->
+				<!-- /.panel-body -->
 		</div>
 		<!-- /.panel-body -->
 	</div>
