--- a/components/genseqProjetos/projetos.html
+++ b/components/genseqProjetos/projetos.html
@@ -81,6 +81,17 @@
 			</div>
 			<!-- /.panel-body -->
 		</div>
+		<div restrict access="0" class="panel panel-default">
+		<!-- view not logged -->
+			<div class="panel-body">
+				<div class="table-responsive">
+					É necessário estar logado para visualizar essa página.
+				</div>
+				
+				<!-- /.table-responsive -->
+			</div>
+				<!-- /.panel-body -->
+		</div>
 	</div>
 	<!-- /.panel -->
 </div>
