Fixes que eu nem lembro mais o que
Fixes

--- a/components/genseqAmostras/amostras.html
+++ b/components/genseqAmostras/amostras.html
@@ -1,14 +1,14 @@
 <div class="row">
 	<div class="col-lg-12">
 		<h1 class="page-header"> Amostras</h1>
-	</div>  
+	</div>
 	<!-- /.col-lg-12 -->
 </div>
 <!-- /.row -->
 <div class="row">
 	<div class="col-lg-12">
-		<div class="panel-heading">
-			<label>Nome <input type="text" ng-model="vm.filtro_projeto" /></label> 
+		<div restric access="1 2" class="panel-heading">
+			<label>Nome <input type="text" ng-model="vm.filtro_projeto" /></label>
 		</div>
 		<div restrict access="1" class="panel panel-default">
 		<!-- view admin -->
@@ -36,7 +36,7 @@
 						</tbody>
 					</table>
 				</div>
-				
+
 				<!-- /.table-responsive -->
 			</div>
 			<!-- /.panel-body -->
@@ -68,11 +68,11 @@
 							</tr>
 						</tbody>
 					</table>
-				</div>					
+				</div>
 				<!-- /.table-responsive -->
 			</div>
 			<!-- /.panel-body -->
-			
+
 		</div>
 		<!-- /.panel-body -->
 		<div restrict access="0" class="panel panel-default">
@@ -81,7 +81,7 @@
 				<div class="table-responsive">
 					É necessário estar logado para visualizar essa página.
 				</div>
-				
+
 				<!-- /.table-responsive -->
 			</div>
 				<!-- /.panel-body -->
@@ -134,7 +134,7 @@
 					<i class="fa fa-plus"></i> Adicionar Amostra
 				</button>
 					</div>
-					
+
 				</div>
 			</div>
 		</div>
@@ -182,7 +182,7 @@
 								<td>{{registro.amostra.status.descricao}}
 									<button type="button" class="btn btn-sm btn-success pull-right" ng-click="vm.receber_amostra(registro)"><i class="fa fa-check"></i> Recebida</button>
 									<button type="button" class="btn btn-sm btn-danger pull-right" ng-click="vm.rejeitar_amostra(registro)"><i class="fa fa-times"></i> Rejeitada</button>
-									
+
 								</td>
 							</tr>
 						</tbody>
@@ -193,7 +193,7 @@
 					<i class="fa fa-plus"></i> Adicionar Amostra
 				</button>
 					</div>
-					
+
 				</div>
 			</div>
 		</div>
@@ -213,14 +213,14 @@
 				<div class="panel panel-default">
 					<div class="panel-body">
 						<form role="form" ng-submit="projeto__form.$valid && vm.submit()" name="projeto__form" novalidate>
-							<div class="form-group"> 
+							<div class="form-group">
                                 <label>Organismo</label>
 								<input type="text" class="form-control" id="projeto__organismo" name="projeto__organismo" placeholder="Organismo " ng-model="vm.organismo" required />
 								<small ng-show="projeto__form.projeto__organismo.$error.required" class="text-danger">
 									Este campo é obrigatório
 								</small>
 							</div>
-							<div class="form-group"> 
+							<div class="form-group">
                                 <label>Código</label>
 								<input type="text" class="form-control" id="projeto__cod_origem" name="projeto__cod_origem" placeholder="Código " ng-model="vm.cod_origem"/>
 
@@ -232,7 +232,7 @@
 									Este campo só pode conter números
 								</small>
 							</div>
-							<div class="form-group"> 
+							<div class="form-group">
                         <label>Escolha o tipo de organismo</label>
 								<select class="selectpicker"  ng-model="vm.tipo" ng-options="tipo.descricao for tipo in vm.lista_tipos" required>
 								  <option value="">Selecione uma opção</option> <!-- not selected / blank option -->
@@ -250,18 +250,18 @@
 									<option value="">Selecione uma opção</option> <!-- not selected / blank option -->
 								</select>
 							</div>
-							<div class="form-group"> 
+							<div class="form-group">
                                 <label>Observacao</label>
 								<input type="text" class="form-control" id="projeto__observacao" name="projeto__organismo" placeholder="Observacao " ng-model="vm.observacao" />
-	
+
 							</div>
 							<div class="btn-toolbar">
-								<button type="reset" class="btn btn-sm btn-danger pull-right" ng-click="vm.limpar_amostra()">&nbsp;&nbsp;<i class="fa fa-times"></i> Limpar&nbsp;&nbsp;&nbsp;</button> 
+								<button type="reset" class="btn btn-sm btn-danger pull-right" ng-click="vm.limpar_amostra()">&nbsp;&nbsp;<i class="fa fa-times"></i> Limpar&nbsp;&nbsp;&nbsp;</button>
 								<button type="submit" class="btn btn-sm btn-success pull-right" onclick="projeto__form.$valid"><i class="fa fa-check"></i> Cadastrar</button>
 							</div>
 						</form>
 					</div>
-					
+
 				</div>
 			</div>
 		</div>
