--- a/components/genseqUsuarios/novo_usuario.html
+++ b/components/genseqUsuarios/novo_usuario.html
@@ -16,7 +16,7 @@
 
 								<div class="form-group">
 									<label for="registro__nome">Nome Completo</label>
-									<input type="text" class="form-control" id="registro__nome" placeholder="Charles Darwin" ng-model="vm.nome">
+									<input type="text" class="form-control" id="registro__nome" placeholder="Nome Sobrenome" ng-model="vm.nome">
 								</div>
 
 								<div class="form-group">
@@ -26,7 +26,7 @@
 
 								<div class="form-group">
 									<label for="registro__password">Senha</label>
-									<input type="password" class="form-control" id="registro__password" placeholder="minhasenha" ng-model="vm.password">
+									<input type="password" class="form-control" id="registro__password" ng-model="vm.password">
 								</div>
 
 								<div class="form-group pull-right">
