--- a/views/dashboard/home.html
+++ b/views/dashboard/home.html
@@ -8,7 +8,7 @@
     <div restrict access="0" class="row">
         <div class="col-lg-12 text-center">
             <div class="well well-sm">
-                <span> Primeiro acesso?  <a ui-sref="dashboard.novo_cadastro"> Clique aqui para efetuar seu cadastro.</a></span>
+                <span> Primeiro acesso?  <a ui-sref-active="active" ui-sref="dashboard.novo_usuario"> Clique aqui para efetuar seu cadastro.</a></span>
             </div>
         </div>
         <!-- /.col-lg-12 -->
